Quiz CRUD api.
